--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -43,7 +43,7 @@ jobs:
           sudo apt-get install graphviz
           sudo apt-get update && sudo apt-get upgrade
           pip install --upgrade pip
-          pip install taolib invoke
+          pip install taolib invoke mystx
           pip install -e .[rtd]
           invoke doc
       - name: Setup Pages
